--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+body{
+  padding: 10px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+ul{
+list-style-type: none;  
+}
+li {
+  float: left;
+}
+li {
+  display: block;
+  padding: 8px;
+  background-color: #3610a0;
   color: white;
+  font-weight: 600;
 }
+li a{
+  color: white;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav{
+  margin: 1px 0px 5px 0px;
+}
+.box{
+  border-bottom: 2px solid #d9b0dd;
 }
